# Mingw-WorkflowTest

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
